se modifican los estilos responive

--- a/index.html
+++ b/index.html
@@ -220,7 +220,12 @@
         </div>
       </div>
       <div class="col-12">
-        <div class="row" style="max-width: 100%; padding-top: 80px; padding-bottom: 50px;">
+        <div class="row" style="max-width: 100%; padding-top: 80px; padding-bottom: 90px;">
+          <div class="vision col-lg-6">
+            <div class="vision-img" data-aos="zoom-in-left">
+              <img style="height: auto; max-width: 100%;" src="img/vision.png" alt="">
+            </div>
+          </div>
           <div class="contenido-vision col-lg-6">
             <div class="titulo-vision" style="margin: 20px; padding-top: 40px;" data-aos="fade-right">
               <h1>VISION</h1>
@@ -229,12 +234,6 @@
               comercialización, integración, instalación y mantenimiento de Sistemas Electrónicos de
               Seguridad.</p>
           </div>
-          <div class="vision col-lg-6">
-            <div class="vision-img" data-aos="zoom-in-left">
-              <img style="height: auto; max-width: 100%;" src="img/vision.png" alt="">
-            </div>
-          </div>
-
         </div>
       </div>
   </section>
@@ -632,7 +631,11 @@
         <div class="col-lg-12">
           <div class="socials">
             <div class="copyright">
-              <h5>COPYRIGHT © 2021 SENA - Medsan Security® Todos los derechos reservados.</h5>
+              <h5>
+                COPYRIGHT © 2021 SENA - Medsan Security® Todos los derechos reservados.
+                <br>
+                Desarrollador por: Juan Sebastian Bustos Marroquin
+              </h5>
             </div>
             <ul>
               <a href="https://www.facebook.com/seguridadelectronica.com.co"><i class="fa fa-facebook"></i></a>
