Se modifica los estilos y se agrega un section con el anuncio 3 que incluye un gradient mejorando el aspecto visual de la pagina

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/styleWsp.css">
   <link rel="stylesheet" href="css/styleHome.css">
   <link rel="stylesheet" href="css/styleModal.css">
-  <!--footer-->
+  <!--FontAwesome-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -511,6 +511,16 @@
     </div>
   </section>
 
+  <section>
+    <div class="contenido-anuncio3">
+      <div class="col-lg-12">
+        <div class="anuncio3">
+          
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- section contactanos -->
   <section id="section-contactanos">
     <div class="contenedor-contacto" style="padding-bottom: 150px; ">
@@ -651,9 +661,7 @@
 
   <!-- Boton de Whatsapp -->
   <a href="https://api.whatsapp.com/send?phone=3002710009&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Medsan%20."
-    class="float" target="_blank">
-    <i class="fa fa-whatsapp my-float"></i>
-  </a>
+    class="float" target="_blank"><i class="fa fa-whatsapp my-float"></i></a>
   <!-- sweet alert 2 -->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!--Import AJAX-->
@@ -667,7 +675,6 @@
   <!-- funciones -->
   <script src="js/main.js"></script>
   <script src="js/politicas.js"></script>
-  
 
 </body>
 
