Se modifica el tamaño del logo en un max-width para solucionar el error de los elementos desagrupados inline. Adicionalmente se agrega un max-width al contacto.

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
   <section id="section-contactanos">
     <div class="contenedor-contacto" style="padding-bottom: 150px; ">
       <div class="col-12">
-        <div class="row justify-content-center" style="max-width: 100%; padding: 0% 10%; margin: auto;">
+        <div class="row justify-content-center contacto-container">
           <div class="contacto col-lg-6" data-aos="zoom-out-up">
             <div class="contacto-titulo">
               <h1>CONTACTANOS</h1>
