Se modifica los estilos del home y se corrigen errores responsive.

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   <section id="section-nosotros">
     <div class="container-nosotros">
       <div class="col-12">
-        <div class="row" style="max-width: 100%; padding-top: 80px;">
+        <div class="row">
           <div class="contenido-mision col-lg-6">
             <div class="titulo-mision" style="margin: 20px; padding-top: 40px;" data-aos="fade-right">
               <h1>MISION</h1>
@@ -526,7 +526,7 @@
     <div class="contenedor-contacto" style="padding-bottom: 150px; ">
       <div class="col-12">
         <div class="row justify-content-center contacto-container">
-          <div class="contacto col-lg-6" data-aos="zoom-out-up">
+          <div class="contacto col-lg-6" data-aos="zoom-in">
             <div class="contacto-titulo">
               <h1>CONTACTANOS</h1>
             </div>
