Se modifica el responsive de la section contacto, adicionalmente se corrige el error del row del footer en la columna de empresa.

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
   <section id="section-contactanos">
     <div class="contenedor-contacto" style="padding-bottom: 150px; ">
       <div class="col-12">
-        <div class="row justify-content-center contacto-container">
+        <div class="row contacto-container">
           <div class="contacto col-lg-6" data-aos="zoom-in">
             <div class="contacto-titulo">
               <h1>CONTACTANOS</h1>
@@ -551,7 +551,6 @@
                   </div>
                 </div>
                 <div class="contacto-body-numeros">
-
                   <div>
                     <label for="apellidoContacto" class="form-label"
                       style="color: #fff; padding-top: 15px; text-align: center; width: 100%;">Apellido</label>
@@ -625,13 +624,9 @@
           <div class="col-md-4">
             <h5 class="titulo-footer text-white">EMPRESA</h5>
             <ul class="subtitulos-footer list-unstyled">
-              <div class="row">
-                <div class="col-lg-12">
-                  <li><span>medsan@seguridadelectronica.com.co</span></li>
-                  <li><span>3002710009</span></li>
-                  <li><span>Kra 92 #8c-36, Castilla, Kennedy, Bogotá D.C.</span></li>
-                </div>
-              </div>
+              <li><span>medsan@seguridadelectronica.com.co</span></li>
+              <li><span>3002710009</span></li>
+              <li><span>Kra 92 #8c-36, Castilla, Kennedy, Bogotá D.C.</span></li>
           </div>
         </div>
       </div>
