Se agrega la imagen img-thanks.svg, se crea el archivo thanks.html y se agrega una alternativa URL para los formSubmit a thanks.html

--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
               </div>
             </div>
           </div>
+          <!-- alternative URl form Tanks Page before form submit -->
+              <!-- Routing to thanks page in the localhost -->
+              <!-- <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">  -->
+              <!-- Routing to thanks page in the Production Environment Virtual Machine-->
+              <input type="hidden" name="_next" value="http://158.101.30.210/MedsanSecurity/thanks.html"> 
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
             <button type="submit" class="btn btn-primary">Enviar</button>
@@ -502,7 +507,12 @@
                     class="form-control" required></textarea>
                   <div class="invalid-tooltip position-relative">Porfavor ingrese su comentario</div>
                 </div>
-                <button id="" type="submit" class="btn btn-primary enviar-comentario">Enviar</button>
+                <!-- alternative URl form Tanks Page before form submit -->
+                <!-- Routing to thanks page in the localhost -->
+                <!-- <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">  -->
+                <!-- Routing to thanks page in the Production Environment Virtual Machine-->
+                <input type="hidden" name="_next" value="http://158.101.30.210/MedsanSecurity/thanks.html"> 
+                <button type="submit" class="btn btn-primary enviar-comentario">Enviar</button>
               </div>
             </form>
           </div>
@@ -577,6 +587,11 @@
                   </div>
                 </div>
               </div>
+              <!-- alternative URl form Tanks Page before form submit -->
+              <!-- Routing to thanks page in the localhost -->
+              <!-- <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">  -->
+              <!-- Routing to thanks page in the Production Environment Virtual Machine-->
+              <input type="hidden" name="_next" value="http://158.101.30.210/MedsanSecurity/thanks.html"> 
               <div class="contacto-footer">
                 <button type="submit" class="btn btn-primary enviar-comentario">Enviar</button>
               </div>
