--- a/thanks.html
+++ b/thanks.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shotcut icon" href="medios/logo-medsan-light.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -17,8 +18,8 @@
                     <h2 class="text-center">Muchas Gracias por Preferirnos!</h2>
                     <h7 class="text-center">En unos momentos daremos respuesta a tu petición</h7>
                     <img style="height: 380px; width: auto;" src="img/img-thanks.svg">
-                    <!-- <a href="http://158.101.30.210/MedsanSecurity/" class="btn btn-primary mt-3 m-auto">Volver a Medsan Security</a> Para Produccion-->
-                    <a href="index.html" class="btn btn-primary mt-3 m-auto">Volver a Medsan Security</a>
+                    <a href="http://158.101.30.210/MedsanSecurity/" class="btn btn-primary mt-3 m-auto">Volver a Medsan Security</a>
+                    <!-- <a href="index.html" class="btn btn-primary mt-3 m-auto">Volver a Medsan Security</a> Test Local-->
                 </div>
             </div>
         </div>
